<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    app:layoutDescription="@xml/activity_add_story_scene"
    tools:context=".ui.story.add.AddStoryActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="48dp">

            <TextView
                android:id="@+id/tv_add_story"
                style="@style/StoriTitleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_view_group"
                android:drawablePadding="18dp"
                android:includeFontPadding="false"
                android:padding="18dp"
                android:text="@string/create_new_story"
                android:textColor="@color/primary_blue"
                app:drawableStartCompat="@drawable/ic_back"
                app:drawableTint="@color/secondary_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_image"
                android:layout_width="256dp"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_add_story">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/bg_upload_image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    style="@style/StoriLabelTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:drawablePadding="8dp"
                    android:text="@string/add_image"
                    android:textAlignment="center"
                    android:textColor="@color/primary_grey"
                    app:drawableTint="@color/primary_grey"
                    app:drawableTopCompat="@drawable/ic_add"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_create_photo_preview"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_add_description"
                style="@style/StoriLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/description"
                android:textColor="@color/secondary_blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_image" />

            <com.andikas.storyapp.custom.StoriEditText
                android:id="@+id/ed_add_description"
                style="@style/StoriBaseEditText"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:gravity="top|start"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                app:layout_constraintTop_toBottomOf="@id/tv_add_description" />

            <TextView
                android:id="@+id/tv_add_location"
                style="@style/StoriLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/location"
                android:textColor="@color/secondary_blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_add_description" />

            <com.andikas.storyapp.custom.StoriEditText
                android:id="@+id/ed_add_location"
                style="@style/StoriBaseEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:enabled="false"
                android:hint="@string/location"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/tv_add_location" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/map_location"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/ed_add_location" />

            <com.andikas.storyapp.custom.StoriButton
                android:id="@+id/btn_update_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:elevation="2dp"
                android:fontFamily="@font/poppins_bold"
                android:paddingVertical="16dp"
                android:text="@string/update_location"
                android:textSize="14sp"
                android:translationZ="12dp"
                app:layout_constraintTop_toBottomOf="@id/map_location" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="54dp"
        android:backgroundTint="@color/primary_green"
        android:elevation="2dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:padding="12dp"
        android:stateListAnimator="@null"
        android:translationZ="6dp"
        app:cornerRadius="12dp"
        app:icon="@drawable/ic_check"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

</androidx.constraintlayout.motion.widget.MotionLayout>